[variant-1] обновить триггер CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: 👀 Выгружаем мастер-ветку
-      run: git fetch origin master:master
+      run: git fetch origin master:master --update-head-ok
 
     - name: 🛠 Конфигурируем систему
       if: '!cancelled()'
@@ -34,7 +34,7 @@ jobs:
       
     - name: ⛔️ Проверяем, изменены ли исходные файлы
       run: |
-          if git diff origin/master... | grep -e 'max.js' -e 'CI.yml' -e '.eslintrc.json' -e 'karma.conf.js'; then
+          if git diff origin/master | grep -e 'max.js' -e 'CI.yml' -e '.eslintrc.json' -e 'karma.conf.js'; then
             echo "Изменения в max.js, CI.yml, .eslintrc.json и karma.conf.js не разрешаются."
             exit 1
           fi
